[tool.poetry]
name = "gameoflife"
version = "0.1.0"
description = "Implementation of the game of life made by the late John Conway"
authors = ["Monssaf Toukal <tmonssaf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
